--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ packages = [
 python = "^3.12"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.6.8"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
