--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytz = "^2024.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.8"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
