--- a/ruff.toml
+++ b/ruff.toml
@@ -54,6 +54,7 @@ ignore = [
     "D401",  # First line should be in imperative mood
     "D415",  # First line should end with a period, question mark, or exclamation point
     "D400",  # First line should end with a period
+    "S101",  # Use of assert detected
 ]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
