Improve, remove build args of CI/CD
Docker block request of download (request by --build) and failed CI/CD

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,4 +24,4 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd /home/${{ secrets.USERNAME }}/ovhsaver
-            sudo docker compose up --build
+            sudo docker compose up
